Modifications for the week
